Flesh out the one-shot example.
- Show the current location as a pin on the map
- Enable location refresh
- Add East & West coast GPX files for debugging

--- a/Example/Application/Info.plist
+++ b/Example/Application/Info.plist
@@ -27,6 +27,7 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+		<string>location-services</string>
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
@@ -34,5 +35,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This demo requires access to your device&apos;s location to function properly.</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 </dict>
 </plist>
