Swift 2.2 / Xcode 7.3 updates.
* Fixed deprecations & updated SwiftLint file
* Removed unnecessary UIStackView.

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,13 +1,10 @@
 disabled_rules:
-  - function_body_length
   - line_length
-  - nesting
   - statement_position
-  - type_body_length
-  - type_name
-  - variable_name
-  - variable_name_max_length
-  - variable_name_min_length
+
+type_name:
+  excluded:
+    - No
 
 excluded:
   - Carthage
