Just say ‘no’ to cuddled `else` statements.

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,6 +1,8 @@
+statement_position:
+  statement_mode: uncuddled_else
+
 disabled_rules:
   - line_length
-  - statement_position
 
 type_name:
   excluded:
